--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,15 @@ body {
 
 /* Main header styles */
 
+.main-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0px 3px 16px 0px rgb(0 0 0 / 10%);
+}
+
 .main-header__brand {
     display: inline-block;
     vertical-align: middle;
